--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -134,4 +134,61 @@
 
       }
     }
+    .graphContainer{
+      @include mixins.flex(row ,unset,unset, 2rem);
+      padding: 0 2rem 2rem 0;
+      >div{
+        background-color: white;
+        border-radius: 10px;
+      }
+      .revenue-chart{
+        width: 100%;
+        padding: 1rem 3rem;
+        >h2{
+          @include mixins.heading();
+          margin: 1rem 0 2rem 2.5rem ;
+          text-align: center;
+        }
+      }
+      .dashboard-categories{
+        width: 100%;
+        max-width: 16rem;
+        @include mixins.flex(column,center,unset,0);
+        padding-bottom: 2rem;
+        >h2{
+          @include mixins.heading();
+          margin: 1.5rem 0 2rem 0;
+          text-align: center;
+        }
+        >div{
+          overflow-y: auto;
+          padding-left: 0.5rem;
+        }
+        .category-item {
+          width: 100%;
+          @include mixins.flex(row, space-between);
+          padding: 1rem;
+          > h5 {
+            letter-spacing: 1px;
+            font-weight: 300;
+          }
+          > div {
+            margin-left: auto;
+            width: 6rem;
+            background-color: rgb(217, 217, 217);
+            border-radius: 20px;
+            height: 0.5rem;
+            flex: none;
+            > div {
+              border-radius: 20px;
+              height: 100%;
+            }
+          }
+          > span {
+            font-size: 0.8rem;
+            font-weight: 700;
+          }
+        }
+      }
+    }
   }
