--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -20,3 +20,92 @@
       opacity: 0.8;
     }
   }
+
+  .product-management{
+    @include mixins.flex(row,center,unSet);
+    padding: 4rem;
+    >section{
+      overflow-y: auto;
+      width: 100%;
+      height: 85vh;
+      max-width: 500px;
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.216);
+      background-color: white;
+      padding: 5rem;
+      @include mixins.flex(column,unSet,unSet,1rem);
+      position: relative;
+      border-radius: 5px;
+      >h2{
+        @include mixins.heading();
+        text-align: center;
+      }
+      >img{
+        @include mixins.square(100%);
+        object-fit: cover;
+      }
+      >strong{
+        font-weight: 300;
+      }
+      >span{
+        position: absolute;
+        top:2rem ;
+        right: 2rem;
+      }
+      >p{
+        text-align: center;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+      }
+      >h3{
+        text-align: center;
+        font-size: 2rem;
+      }
+    }
+
+    >article{
+    
+      height: 85vh;
+      padding: 2rem;
+      width: 100%;
+      max-width: 400px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.216);
+      >form{
+        @include mixins.flex(column,unset,center,2rem);
+        >h2{
+          text-transform: uppercase;
+          letter-spacing: 2px;
+        }
+        >img{
+          @include mixins.square(5rem);
+          object-fit: cover;
+          border-radius: 5px;
+        }
+        >div{
+          width: 100%;
+          position: relative;
+          >label{
+            position: absolute;
+            left: 0;
+            top: -1.6rem;
+          }
+          >input{
+            padding: 1rem;
+            border-radius: 5px;
+            @include mixins.inputStyle(100%,1rem,unset,1px solid rgba(13,13,13,0.196))
+          }
+        }
+        >button{
+          padding: 1rem;
+          border: none;
+          background-color: rgb(5,107,224);
+          color: white;
+          width: 100%;
+          border-radius: 5px;
+          font-size: 1.1rem;
+          cursor: pointer;
+        }
+      }
+    }
+  }
