--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,7 +3,9 @@
 @use "products";
 @use "Charts";
 @use "dashboardapp";
+
 @use "mediaquery";
+
 
 
 
@@ -39,6 +41,7 @@
     @include mixins.grid(1fr 4fr,2rem);
     height:100vh;
     background-color:rgb(247,247,247);
+  
         >aside {
             width:100%;
             background-color:white;
@@ -151,3 +154,37 @@
       }
     }
   }
+
+
+
+  #hamburger {
+    display: grid;
+    place-items: center;
+    @include mixins.square(3rem);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: rgba(44, 104, 255);
+    position: fixed;
+    top: 1rem;
+    left: 1rem;
+    font-size: 2rem;
+    background-color: white;
+    border-radius: 50%;
+    // z-index: 9;
+  }
+
+
+  #close-sidebar {
+    width: 80%;
+    margin: 1rem auto;
+    display: block;
+    padding: 0.75rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: rgb(168, 2, 2);
+    color: white;
+    border-radius: 10px;
+  }
+  
